--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,8 +5,8 @@ jobs:
     runs-on: windows-2019
     steps:
       - name: Build
-        run: |
-          ./.github/workflows/build.ps1
+        run: ./scripts/build.ps1
+        shell: powershell
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
