--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: windows-2019
     steps:
       - name: Build
-        run: .\Scripts\build.ps1
+        run: .\Scripts\Build.ps1
         shell: powershell
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
